<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addfriend.AddFriendActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/menu_add_friend" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_nim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_add_name"
            app:layout_constraintStart_toStartOf="@+id/til_add_name"
            app:layout_constraintTop_toBottomOf="@+id/til_add_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_nim"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_kelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_add_name"
            app:layout_constraintStart_toStartOf="@+id/til_add_name"
            app:layout_constraintTop_toBottomOf="@id/til_add_nim">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_kelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_kelas" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_add_name"
            app:layout_constraintStart_toStartOf="@+id/til_add_name"
            app:layout_constraintTop_toBottomOf="@+id/til_add_kelas">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_add_name"
            app:layout_constraintStart_toStartOf="@+id/til_add_name"
            app:layout_constraintTop_toBottomOf="@id/til_add_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/til_add_name"
            app:layout_constraintStart_toStartOf="@id/til_add_name"
            app:layout_constraintTop_toBottomOf="@id/til_add_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_instagram" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_save"
            style="@style/ColoredButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_save"
            app:layout_constraintEnd_toEndOf="@+id/til_add_name"
            app:layout_constraintStart_toStartOf="@+id/til_add_name"
            app:layout_constraintTop_toBottomOf="@+id/til_add_instagram" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>